metrics/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: prometheus-example-app
  name: prometheus-example-app
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: prometheus-example-app
    weight: 100
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: coo-demo
  name: coo-demo
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: coo-demo
    weight: 100
